Implementacion de Precios.html y tablas

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="about.html">Nosotros</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Precios</a></li>
+                <li class="nav-item"><a class="nav-link" href="precios.html">Precios</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Terminos y condiciones</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
             </ul>
@@ -106,7 +106,7 @@
                     <p>Hotel ubicado en pleno centro de Rio de janeiro a pocosmetros de la playa</p>
                 </div>
                 <div>
-                    <button type="button" class="btn btn-secondary btn-reserva"> > Reservar <span class="oi oi-plus"></span</button>
+                    <button type="button" class="btn btn-secondary btn-reserva">Reservar <span class="oi oi-plus"></span</button>
                 </div>
             </div>
             <div class="card-hotel d-flex flex-column justify-content-between">
@@ -154,7 +154,7 @@
                     <h3>Oficina Central</h3>
                     <p> <span class="oi oi-home footer-address-icon"></span>  Sarasa 844 ,CABA, Argentina</p>
                     <p><span class="oi oi-phone footer-address-icon" name="call-outline"></span> +549110123456</p>
-                    <a href="mailto:"><span class="oi oi-inbox footer-address-icon" ></span> contacto@guiahoteles</a>
+                    <a href="mailto:" style="color: black; text-decoration:none ;"><span class="oi oi-inbox footer-address-icon" ></span>contacto@guiahoteles.com</a>
                 </address>
             </div> 
             <div class="col-sm-4 d-flex flex-column align-items-end">
