--- a/about.html
+++ b/about.html
@@ -1,17 +1,17 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS in nodeJs-->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
-
-    <link rel="stylesheet" href="style.css">
-    <title>Guia de Hoteles</title>
-</head>
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        
+        <!-- Bootstrap CSS in nodeJs-->
+        <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" >
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="node_modules/open-iconic/font/css/open-iconic-bootstrap.min.css">
+        <title>Guia de Hoteles</title>
+    </head>
 
 <body>
     <!--Barra de navegacion-->
@@ -24,10 +24,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item "><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item active"><a class="nav-link" href="#">Nosotros</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Precios</a></li>
+                <li class="nav-item active"><a class="nav-link" href="about.html">Nosotros</a></li>
+                <li class="nav-item"><a class="nav-link" href="precios.html">Precios</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Terminos y condiciones</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+                <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
             </ul>
         </div>
     </nav>
@@ -49,23 +49,26 @@
             ratione similique ut omnis architecto praesentium debitis itaque fugiat a tempora qui laboriosam molestiae,
             quasi, aliquid possimus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti assumenda vero
             dicta pariatur eaque, maiores adipisci voluptates vel aut voluptatum sapiente magni nostrum reprehenderit
-            rerum, consequuntur praesentium et recusandae necessitatibus.</span>
+            rerum, consequuntur praesentium et recusandae necessitatibus.
+        </span>
+        
     </div>
+ 
     <footer>
         <div class="row">
             <div class="col-sm-4 d-flex flex-column align-items-start">
-                <a href="#">Facebook</a>
+                <a href="#">Facebook</a> <ion-icon name="logo-facebook"></ion-icon>
                 <a href="#">Twitter</a>
                 <a href="#">Instagram</a>
             </div>
             <div class="col-sm-4 d-flex flex-column align-items-center">
                 <address>
                     <h3>Oficina Central</h3>
-                    <p> Sarasa 844 ,CABA, Argentina</p>
-                    <p> +549110123456</p>
-                    <a href="mailto:">contacto@guiahoteles</a>
+                    <p> <span class="oi oi-home footer-address-icon"></span>  Sarasa 844 ,CABA, Argentina</p>
+                    <p><span class="oi oi-phone footer-address-icon" name="call-outline"></span> +549110123456</p>
+                    <a href="mailto:" style="color: black; text-decoration:none ;"><span class="oi oi-inbox footer-address-icon" ></span>contacto@guiahoteles.com</a>
                 </address>
-            </div>
+            </div> 
             <div class="col-sm-4 d-flex flex-column align-items-end">
                 <a href="#">Nosotros</a>
                 <a href="#">Precios</a>
