--- a/precios.html
+++ b/precios.html
@@ -5,6 +5,11 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap web-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <!-- Bootstrap CSS in nodeJs-->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
@@ -44,59 +49,148 @@
                 <li class="breadcrumb-item active" aria-current="page">Precios</li>
             </ol>
         </nav>
-        <div class="table-responsive">
-        <table class="table table-striped">
-            <thead class="thead-dark ">
-                <th>Calidad</th>
-                <th>Pinamar</th>
-                <th>Mar del Plata</th>
-                <th>San Clemente</th>
-                <th>Santa Teresita</th>
-            </thead>
-            <tbody>
-                <tr>
-                    <td><span class=" oi oi-star"></span></td>
-                    <td>$1000</td>
-                    <td>$1200</td>
-                    <td>$1500</td>
-                    <td>$1800</td>
-                </tr>
-                <tr>
-                    <td><span class=" oi oi-star"></span><span class=" oi oi-star"></span></td>
-                    <td>$2000</td>
-                    <td>$2200</td>
-                    <td>$2500</td>
-                    <td>$2800</td>
-                </tr>
-                <tr>
-                    <td><span class=" oi oi-star"></span><span class=" oi oi-star"></span><span
-                            class=" oi oi-star"></span></td>
-                    <td>$3000</td>
-                    <td>$3200</td>
-                    <td>$3500</td>
-                    <td>$3800</td>
-                </tr>
-                <tr>
-                    <td><span class=" oi oi-star"></span><span class=" oi oi-star"></span><span
-                            class=" oi oi-star"></span><span class=" oi oi-star"></span></td>
-                    <td>$4000</td>
-                    <td>$4200</td>
-                    <td>$4500</td>
-                    <td>$4800</td>
-                </tr>
-                <tr>
-                    <td><span class=" oi oi-star"></span><span class=" oi oi-star"></span><span
-                            class=" oi oi-star"></span><span class=" oi oi-star"></span><span
-                            class=" oi oi-star"></span></td>
-                    <td>$5000</td>
-                    <td>$5200</td>
-                    <td>$5500</td>
-                    <td>$5800</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+        <!--**********************Tabs*****************************-->
+        <ul class=" nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link" id="compara-tab" data-toggle="tab" href="#compara" role="tab"
+                    aria-controls="compara" aria-selected="false">Compara</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="tarjetas-tab" data-toggle="tab" href="#tarjetas" role="tab"
+                    aria-controls="tarjetas" aria-selected="false">Tarjetas</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="comentarios-tab" data-toggle="tab" href="#comentarios" role="tab"
+                    aria-controls="comentarios" aria-selected="false">Comentarios</a>
+            </li>
+        </ul>
 
+        <!--ContentOFTabs-->
+        <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="compara" role="tabpanel" aria-labelledby="compara-tab">
+                <div class="table-responsive">
+                    <table class="table table-striped">
+                        <thead class="thead-dark ">
+                            <th>Calidad</th>
+                            <th>Pinamar</th>
+                            <th>Mar del Plata</th>
+                            <th>San Clemente</th>
+                            <th>Santa Teresita</th>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td><span class=" oi oi-star"></span></td>
+                                <td>$1000</td>
+                                <td>$1200</td>
+                                <td>$1500</td>
+                                <td>$1800</td>
+                            </tr>
+                            <tr>
+                                <td><span class=" oi oi-star"></span><span class=" oi oi-star"></span></td>
+                                <td>$2000</td>
+                                <td>$2200</td>
+                                <td>$2500</td>
+                                <td>$2800</td>
+                            </tr>
+                            <tr>
+                                <td><span class=" oi oi-star"></span><span class=" oi oi-star"></span><span
+                                        class=" oi oi-star"></span></td>
+                                <td>$3000</td>
+                                <td>$3200</td>
+                                <td>$3500</td>
+                                <td>$3800</td>
+                            </tr>
+                            <tr>
+                                <td><span class=" oi oi-star"></span><span class=" oi oi-star"></span><span
+                                        class=" oi oi-star"></span><span class=" oi oi-star"></span></td>
+                                <td>$4000</td>
+                                <td>$4200</td>
+                                <td>$4500</td>
+                                <td>$4800</td>
+                            </tr>
+                            <tr>
+                                <td><span class=" oi oi-star"></span><span class=" oi oi-star"></span><span
+                                        class=" oi oi-star"></span><span class=" oi oi-star"></span><span
+                                        class=" oi oi-star"></span></td>
+                                <td>$5000</td>
+                                <td>$5200</td>
+                                <td>$5500</td>
+                                <td>$5800</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <!--ContentOFTabs-->
+            <div class="tab-pane fade show" id="tarjetas" role="tabpanel" aria-labelledby="tarjetas-tab">
+
+                 <!--Accordeon-->
+                 <div class="accordion" id="accordionExample">
+                    <div class="card">
+                      <div class="card-header" id="headingOne">
+                        <h2 class="mb-0">
+                          <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                            Tarjeta Internacional
+                          </button>
+                        </h2>
+                      </div>
+                  
+                      <div id="collapseOne" class="collapse " aria-labelledby="headingOne" data-parent="#accordionExample">
+                        <div class="card-body">
+                          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                        </div>
+                      </div>
+                    </div>
+                    <div class="card">
+                      <div class="card-header" id="headingTwo">
+                        <h2 class="mb-0">
+                          <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            Tarjeta Gold
+                          </button>
+                        </h2>
+                      </div>
+                      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                        <div class="card-body">
+                          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                        </div>
+                      </div>
+                    </div>
+                    <div class="card">
+                      <div class="card-header" id="headingThree">
+                        <h2 class="mb-0">
+                          <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Tarjeta Black
+                          </button>
+                        </h2>
+                      </div>
+                      <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                        <div class="card-body">
+                          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                <div class="d-flex justify-content-center m-10" >
+                    <div class="card" style="width: 18rem; margin-top: 10px;">
+                        <div class="card-header" style="background-color: #0069d9; color:white">
+                            <p>Tarjetas aceptadas</p>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Tarjeta Internacional</li>
+                            <li class="list-group-item">Tarjeta Gold</li>
+                            <li class="list-group-item">Tarjeta Black</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!--ContentOFTabs-->
+            <div class="tab-pane fade show" id="comentarios" role="tabpanel" aria-labelledby="comentrios-tab">
+                <p>hola mundo!!</p>
+            </div>
+
+        </div>
+        <!--End Content-->
     </div>
 
     <footer>
