--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="about.html">Nosotros</a></li>
                 <li class="nav-item"><a class="nav-link" href="precios.html">Precios</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Terminos y condiciones</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+                <li class="nav-item"><a class="nav-link" href="terminosycondiciones.html">Terminos y condiciones</a></li>
+                <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
             </ul>
         </div>
     </nav>
