--- a/contacto.html
+++ b/contacto.html
@@ -16,9 +16,9 @@
     <!-- en el caso fe grunt -->
     <!-- build:css css/index.css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="node_modules/open-iconic/font/css/open-iconic-bootstrap.min.css">
-    <!-- endbuild -->
+   <!-- endbuild -->
     <title>Guia de Hoteles</title>
 </head>
 
@@ -35,7 +35,7 @@
                 <li class="nav-item "><a class="nav-link" href="index.html">Home</a></li>
                 <li class="nav-item "><a class="nav-link" href="about.html">Nosotros</a></li>
                 <li class="nav-item"><a class="nav-link" href="precios.html">Precios</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Terminos y condiciones</a></li>
+                <li class="nav-item"><a class="nav-link" href="terminosycondiciones.html">Terminos y condiciones</a></li>
                 <li class="nav-item active"><a class="nav-link" href="contacto.html">Contacto</a></li>
             </ul>
         </div>
@@ -155,9 +155,9 @@
     <!-- en el caso de grunt -->
     <!-- build:js js/main.js -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/popper.js/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"></script>
+    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="js/index.js"></script>
     <!-- endbuild -->
 </body>
 
